Updated Builders section

--- a/index.html
+++ b/index.html
@@ -462,21 +462,21 @@
                 <div class="builders-grid">
                     <div class="b-card">
                         <i data-lucide="code" size="48" style="color:var(--primary-green); margin-bottom:20px;"></i>
-                        <span class="b-role">Architecture</span>
+                        <span class="b-role">Architecture + Design</span>
                         <h3>Stephen Walter</h3>
-                        <p>Creative Technologist at Weird Machine.</p>
+                        <p>Creative Technologist and community media trickster: <a href="https://weirdmachine.org" target="_blank" style="color:var(--primary-green); text-decoration:underline;">Weird Machine</a>.</p>
                     </div>
                     <div class="b-card">
                         <i data-lucide="radio" size="48" style="color:var(--primary-green); margin-bottom:20px;"></i>
-                        <span class="b-role">Community Lead</span>
-                        <h3>Brookline Interactive</h3>
-                        <p>Public access media & civic hub.</p>
+                        <span class="b-role">Community Home</span>
+                        <h3>Brookline Interactive Group</h3>
+                        <p>Public access media & civic hub located in <a href="https://brooklineinteractive.org" target="_blank" style="color:var(--primary-green); text-decoration:underline;">Brookline, MA</a>.</p>
                     </div>
                     <div class="b-card">
                         <i data-lucide="database" size="48" style="color:var(--primary-green); margin-bottom:20px;"></i>
                         <span class="b-role">Data Strategy</span>
-                        <h3>Neighborhood.AI</h3>
-                        <p>Local data models & training.</p>
+                        <h3>Neighborhood AI</h3>
+                        <p>Local data models & policy experts based in <a href="https://neighborhoodai.org" target="_blank" style="color:var(--primary-green); text-decoration:underline;">Boston & New York</a>.</p>
                     </div>
                 </div>
             </div>
