--- a/index.html
+++ b/index.html
@@ -299,9 +299,18 @@
                     </button>
                 </div>
                 
-                <p class="hero-explainer reveal-content">
-                    We are a decentralized coalition of neighbors, coders, and civic leaders. Our project builds open-source digital infrastructure that allows local communities to govern their own data, use AI for public good, and reclaim the future of their cities from big tech monopolies.
-                </p>
+                <div class="hero-columns reveal-content">
+                    <div class="hero-col">
+                        <p class="hero-explainer">
+                            We are a decentralized coalition of neighbors, coders, and civic leaders. Our project builds open-source digital infrastructure that allows local communities to govern their own data, use AI for public good, and reclaim the future of their cities from big tech monopolies. 
+                        </p>
+                    </div>
+                    <div class="hero-col">
+                        <p class="hero-explainer">
+                            We believe true freedom is not just escaping or avoiding oppression - it is building a world without it. This site has some of our early attempts at building things for a more thoughtful, accessible, and creative democracy.
+                        </p>
+                    </div>
+                </div>
 
                 <div class="hero-nav reveal-content">
                     <a href="#apps" class="nav-btn">Browse Tools</a>
@@ -315,10 +324,13 @@
         </header>
 
         <section class="section infra-section" id="apps">
+            <div class="city-map-pattern"></div>
             <svg class="civic-doodle d-1" viewBox="0 0 24 24"><path d="M12 2v20M6 12h12M6 12l-2-2M18 12l2-2" /></svg>
             <svg class="civic-doodle d-2" viewBox="0 0 24 24"><circle cx="5.5" cy="17.5" r="3.5"/><circle cx="18.5" cy="17.5" r="3.5"/><path d="M15 6a1 1 0 1 0 0-2 1 1 0 0 0 0 2zm-3 11.5V14l-3-3 4-3 2 3h2"/></svg>
             <svg class="civic-doodle d-3" viewBox="0 0 24 24"><rect x="2" y="6" width="20" height="12" rx="2" /><circle cx="7" cy="18" r="2"/><circle cx="17" cy="18" r="2"/></svg>
             <svg class="civic-doodle d-4" viewBox="0 0 24 24"><path d="M4 15s1-1 4-1 5 2 8 2 4-1 4-1V3s-1 1-4 1-5-2-8-2-4 1-4 1z"/><line x1="4" y1="22" x2="4" y2="15"/></svg>
+            <svg class="civic-doodle d-5" viewBox="0 0 24 24"><path d="M3 21h18M9 8h1M9 12h1M9 16h1M14 8h1M14 12h1M14 16h1M5 21V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2v16"/></svg>
+            <svg class="civic-doodle d-6" viewBox="0 0 24 24"><circle cx="12" cy="12" r="10"/><path d="M12 2a14.5 14.5 0 0 0 0 20 14.5 14.5 0 0 0 0-20M2 12h20"/></svg>
 
             <div class="container">
                 <div class="text-center reveal-content">
@@ -341,6 +353,9 @@
         </section>
 
         <section class="section values-section" id="values">
+            <svg class="civic-doodle d-7" viewBox="0 0 24 24"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/></svg>
+            <svg class="civic-doodle d-8" viewBox="0 0 24 24"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/><circle cx="9" cy="7" r="4"/><path d="M23 21v-2a4 4 0 0 0-3-3.87M16 3.13a4 4 0 0 1 0 7.75"/></svg>
+            <svg class="civic-doodle d-9" viewBox="0 0 24 24"><rect x="3" y="3" width="18" height="18" rx="2"/><path d="M3 9h18M9 21V9"/></svg>
             <div class="container reveal-content">
                 <div class="values-grid-modern">
                     <div class="values-list">
@@ -429,6 +444,9 @@
         </section>
 
         <section class="section mission-section" id="mission">
+            <svg class="civic-doodle d-10" viewBox="0 0 24 24"><path d="M22 12h-4l-3 9L9 3l-3 9H2"/></svg>
+            <svg class="civic-doodle d-11" viewBox="0 0 24 24"><circle cx="12" cy="12" r="3"/><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"/></svg>
+            <svg class="civic-doodle d-12" viewBox="0 0 24 24"><path d="M21 16V8a2 2 0 0 0-1-1.73l-7-4a2 2 0 0 0-2 0l-7 4A2 2 0 0 0 3 8v8a2 2 0 0 0 1 1.73l7 4a2 2 0 0 0 2 0l7-4A2 2 0 0 0 21 16z"/><polyline points="3.27 6.96 12 12.01 20.73 6.96"/><line x1="12" y1="22.08" x2="12" y2="12"/></svg>
             <div class="container reveal-content">
                 <h2 class="text-center">Mission Control</h2>
                 
@@ -455,6 +473,9 @@
         </section>
 
         <section class="section builders-section">
+            <svg class="civic-doodle d-13" viewBox="0 0 24 24"><path d="M14.7 6.3a1 1 0 0 0 0 1.4l1.6 1.6a1 1 0 0 0 1.4 0l3.77-3.77a6 6 0 0 1-7.94 7.94l-6.91 6.91a2.12 2.12 0 0 1-3-3l6.91-6.91a6 6 0 0 1 7.94-7.94l-3.76 3.76z"/></svg>
+            <svg class="civic-doodle d-14" viewBox="0 0 24 24"><path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"/></svg>
+            <svg class="civic-doodle d-15" viewBox="0 0 24 24"><rect x="2" y="3" width="20" height="14" rx="2" ry="2"/><line x1="8" y1="21" x2="16" y2="21"/><line x1="12" y1="17" x2="12" y2="21"/></svg>
             <div class="sketch-overlay"></div>
             <div class="container reveal-content">
                 <h2 class="text-center">The Builders Network</h2>
@@ -463,8 +484,8 @@
                     <div class="b-card">
                         <i data-lucide="code" size="48" style="color:var(--primary-green); margin-bottom:20px;"></i>
                         <span class="b-role">Architecture + Design</span>
-                        <h3>Stephen Walter</h3>
-                        <p>Creative Technologist and community media trickster: <a href="https://weirdmachine.org" target="_blank" style="color:var(--primary-green); text-decoration:underline;">Weird Machine</a>.</p>
+                        <h3>Weird Machine</h3>
+                        <p>The avatar and project database for creative technologist and community media trickster <a href="https://weirdmachine.org" target="_blank" style="color:var(--primary-green); text-decoration:underline;">Stephen Walter</a>.</p>
                     </div>
                     <div class="b-card">
                         <i data-lucide="radio" size="48" style="color:var(--primary-green); margin-bottom:20px;"></i>
@@ -483,6 +504,8 @@
         </section>
 
         <section class="section playground-section" id="ai-playground">
+            <svg class="civic-doodle d-16" viewBox="0 0 24 24"><polyline points="16 18 22 12 16 6"/><polyline points="8 6 2 12 8 18"/></svg>
+            <svg class="civic-doodle d-17" viewBox="0 0 24 24"><rect x="4" y="4" width="16" height="16" rx="2" ry="2"/><rect x="9" y="9" width="6" height="6"/><line x1="9" y1="1" x2="9" y2="4"/><line x1="15" y1="1" x2="15" y2="4"/><line x1="9" y1="20" x2="9" y2="23"/><line x1="15" y1="20" x2="15" y2="23"/><line x1="20" y1="9" x2="23" y2="9"/><line x1="20" y1="14" x2="23" y2="14"/><line x1="1" y1="9" x2="4" y2="9"/><line x1="1" y1="14" x2="4" y2="14"/></svg>
             <div class="container reveal-content">
                 <div class="text-center" style="margin-bottom:40px;">
                     <h2>AI Playground</h2>
@@ -628,6 +651,9 @@
                     </div>
                 </div>
                 <div class="footer-bottom" style="flex-direction: column; gap: 20px; text-align: center; border-top:1px solid #cbd5e1; padding-top:40px;">
+                    <div class="footer-logo-container">
+                        <img src="secondary.png" alt="Brookline Interactive Group" class="footer-logo">
+                    </div>
                     <div style="font-size: 0.9rem; color: #64748b;">
                         A community AI app from <a href="https://brooklineinteractive.org" target="_blank" style="color:var(--primary-green); text-decoration:underline;">Brookline Interactive Group</a> in partnership with <a href="https://neighborhoodai.org" target="_blank" style="color:var(--primary-green); text-decoration:underline;">Neighborhood AI</a>.
                     </div>
