--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
                     <div class="get-involved-box">
                         <h3 style="margin-bottom:15px; color:#0f172a;">Get Involved</h3>
                         <p style="opacity:0.8; margin-bottom:20px; color:#334155;">Developers, organizers, leaders: Help us deploy these tools.</p>
-                        <a href="/cdn-cgi/l/email-protection#9bf8f4f5effaf8efdbf9e9f4f4f0f7f2f5fef2f5effee9faf8eff2edfeb5f4e9fc" class="btn-footer-contact">
+                        <a href="mailto:stephen@weirdmachine.org?subject=Community%20AI%20-%20Get%20Involved" class="btn-footer-contact" class="btn-footer-contact">
                             <i data-lucide="mail" width="18"></i> Contact Team
                         </a>
                     </div>
