Added footer logo

--- a/index.html
+++ b/index.html
@@ -781,6 +781,8 @@
                     </div>
                     <div class="footer-logo-container">
                         <a href="https://weirdmachine.org"><img src="weirdmachine.png" alt="Weird Machine" class="footer-logo"></a>
+                    </div><div class="footer-logo-container">
+                        <a href="https://brooklineinteractive.org"><img src="secondary.png" alt="Brookline Interactive Group" class="footer-logo"></a>
                     </div>
                     <div id="google_translate_element" style="margin-top:15px;"></div>
                 </div>
