--- a/index.html
+++ b/index.html
@@ -737,7 +737,7 @@
                     <div class="get-involved-box">
                         <h3 style="margin-bottom:15px; color:#0f172a;">Get Involved</h3>
                         <p style="opacity:0.8; margin-bottom:20px; color:#334155;">Developers, organizers, leaders: Help us deploy these tools.</p>
-                        <a href="mailto:stephen@weirdmachine.org?subject=Community%20AI%20-%20Get%20Involved" class="btn-footer-contact" class="btn-footer-contact">
+                        <a href="/cdn-cgi/l/email-protection#6c1f18091c0409022c1b09051e08010d0f0405020942031e0b531f190e06090f18512f0301011902051815495e5c2d25495e5c41495e5c2b0918495e5c25021a03001a0908" class="btn-footer-contact" class="btn-footer-contact">
                             <i data-lucide="mail" width="18"></i> Contact Team
                         </a>
                     </div>
@@ -791,7 +791,7 @@
 
     </div>
 
-    <script>
+    <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script><script>
         window.CONFIG = {}; 
     </script>
     <script src="config.js" onerror="console.log('No local config found. Using Netlify Proxy.')"></script>
@@ -1371,12 +1371,4 @@
 
             function animateCodeLines() {
                 if (currentLine < codeLines.length) {
-                    codeLines[currentLine].classList.add('visible');
-                    currentLine++;
-                    setTimeout(animateCodeLines, 150 + Math.random() * 100);
-                }
-            }
-        }
-    </script>
-</body>
-</html>
+                    codeLines[currentLine].classList.
